<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/point_1"
        android:textColor="#000000"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView3"
        app:layout_constraintEnd_toStartOf="@+id/appCompatTextView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="@dimen/_4sdp"
        android:layout_height="@dimen/_19sdp"
        android:text="@string/colon"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textX1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:hint="@string/x1"
        android:inputType="number"
        android:nextFocusDown="@+id/textY1"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView"
        app:layout_constraintEnd_toStartOf="@+id/textX2"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView2"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textY1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:hint="@string/y1"
        android:inputType="number"
        android:nextFocusDown="@+id/textX2"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView3"
        app:layout_constraintEnd_toStartOf="@+id/textY2"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView4"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:text="@string/point_2"
        android:textColor="#000000"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/btnDraw"
        app:layout_constraintEnd_toStartOf="@+id/appCompatTextView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView4"
        android:layout_width="@dimen/_4sdp"
        android:layout_height="@dimen/_19sdp"
        android:text="@string/colon"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView3"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView3"
        app:layout_constraintTop_toTopOf="@+id/appCompatTextView3" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textX2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:hint="@string/x2"
        android:inputType="number"
        android:nextFocusDown="@+id/textY2"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textX1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textX1"
        app:layout_constraintTop_toTopOf="@+id/textX1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textY2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:hint="@string/y2"
        android:inputType="number"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textY1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textY1"
        app:layout_constraintTop_toTopOf="@+id/textY1" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="btnDraw,btnClearPoints,btnClearLines,btnClear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:background="@color/colorPrimary"
        android:text="@string/draw_line"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/btnClearPoints"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textY1"
        app:layout_constraintVertical_chainStyle="packed" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClearPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:background="@color/colorPrimary"
        android:text="@string/clear_points"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/btnClearLines"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDraw"
        app:layout_constraintTop_toBottomOf="@+id/textY1"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClearLines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:background="@color/colorPrimary"
        android:text="@string/clear_lines"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btnClearPoints"
        app:layout_constraintEnd_toStartOf="@+id/btnClear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnClearPoints"
        app:layout_constraintTop_toBottomOf="@+id/textY1"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginLeft="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:background="@color/colorPrimary"
        android:text="@string/clear"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btnClearLines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnClearLines"
        app:layout_constraintTop_toTopOf="@+id/btnClearLines" />


    <com.ahmadarif.drawline.CustomImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@color/img_bg_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDraw" />

</androidx.constraintlayout.widget.ConstraintLayout>